# fastapi-template

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  oauth.py  todo.py  user_router.py
app/api/v1/routers/: oauth.py  todo.py  user_router.py
app/core/: config.py  db.py  exceptions.py  logger.py  models.py  repository.py  router.py  service.py  transaction_manager.py
app/todo/: models.py  repository.py  schemas.py  service.py
app/users/: auth_config.py  dependencies.py  manager.py  models.py  models2.py  oauth_config.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 09a0d67fbb4b_first_migration.py  36097171df22_first_migration.py  a89f37c7c043_create_todos_table.py  c8d8a19c564f_added_user_field_to_todo_model.py  e20b6bb71642_first_migration.py
